diesel_compile_tests/tests/fail/as_changeset_on_non_struct.stderr
error: This derive can only be used on structs
  --> $DIR/as_changeset_on_non_struct.rs:12:10
   |
12 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
